@@ -1,5 +1,5 @@
-in 100
-mread8 RA, 100
+in 0x100
+mread8 RA, 0x100
 outc RA
 
 ;Example program which takes in a line of input,
